--- a/index.html
+++ b/index.html
@@ -185,16 +185,8 @@
       <!-- Google kaarten  -->
   <div class="gebied-cards">
     <div class="gebied-card">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78456.38185887302!2d4.926743081030173!3d52.08406349929276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c66890cfe4d503%3A0x3b199940623d03cc!2sUtrecht!5e0!3m2!1sen!2snl!4v1751386968759!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/d/embed?mid=1HiqmOz8MOkmfUKcrybo71UzlOqdUYwg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       <h3>Utrecht</h3>
-    </div>
-    <div class="gebied-card">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d39226.16970652463!2d5.216382155462688!3d52.08636296922207!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c642884bf0d4ab%3A0x400de5a8d1e7a90!2sZeist!5e0!3m2!1sen!2snl!4v1751386926278!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <h3>Zeist</h3>
-    </div>
-    <div class="gebied-card">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19606.80518169788!2d5.168668055906909!3d52.10064965505423!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c668fa96b0d3a7%3A0x58b182fb08a2c573!2sDe%20Bilt!5e0!3m2!1sen!2snl!4v1751387342860!5m2!1sen!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <h3>De Bilt</h3>
     </div>
   </div>
 </section>
@@ -221,7 +213,7 @@
         <p>Zondag: Gesloten</p>
       </div>
     </section>
-    <p class="copyright">Made with love by Yukai services | All rights reserved</p>
+    <p class="copyright">Made with love by Yukai services | All rights reserved @2025</p>
   
   </footer>
    <!-- scripts -->
